import java.awt.*;

public class ColorPalette {

    // kullancağımız renkleri data class olarak ayarladık
    Color navy = Color.decode("#0c2461");
    Color gray = Color.decode("#2f3640");
    Color red = Color.decode("#b71540");
    Color cyan = Color.decode("#079992");
    Color yellow = Color.decode("#e58e26");
    Color white = Color.decode("#f1f2f6");

    Color black = Color.decode("#1e272e");
}
